--- a/site.yaml
+++ b/site.yaml
@@ -1,8 +1,17 @@
 ---
 - hosts: server
   # connection: local
-  vars:
-    ansible_python_interpreter: /usr/bin/python3
+  pre_tasks:
+    - name: "check distridution"
+      debug:
+        var: "ansible_distribution"
+      failed_when: ansible_distribution != 'Ubuntu'
+
+    - name: "check architecture"
+      debug:
+        var: "ansible_architecture"
+      failed_when: ansible_architecture != 'X86_64'
+
   roles:
     - role: common
     - role: docker
