--- a/site.yaml
+++ b/site.yaml
@@ -10,7 +10,7 @@
     - name: "check architecture"
       debug:
         var: "ansible_architecture"
-      failed_when: ansible_architecture != 'X86_64'
+      failed_when: ansible_architecture != 'x86_64'
 
   roles:
     - role: common
