--- a/roles/docker/tasks/main.yaml
+++ b/roles/docker/tasks/main.yaml
@@ -8,3 +8,6 @@
 - name: service.yaml
   include_tasks: service.yaml
 
+- name: gvisor.yaml
+  include_tasks: gvisor.yaml
+  when: install_gvisor == True
