--- a/roles/docker-compose/tasks/package.yaml
+++ b/roles/docker-compose/tasks/package.yaml
@@ -3,3 +3,15 @@
   get_url:
     url: "{{ source_url }}"
     dest: "{{ install_path }}"
+  when: install_docker_compose_v2 == False
+
+- name: "mkdir"
+  file:
+    path: "{{ docker_compose_v2.install_dir }}"
+    state: directory
+
+- name: "dl"
+  get_url:
+    url: "{{ docker_compose_v2.source_url }}"
+    dest: "{{ docker_compose_v2.install_dir }}/docker-compose"
+
